# pytest-plugins-duckdb

./: .gitignore  README.md  pyproject.toml
src/pytest_plugins_duckdb/: main.py
