[project]
name = "pytest-plugins-duckdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.3",
    "duckdb>=1.1.0",
    "pandas>=2.2.2",
    "beautifulsoup4>=4.12.3",
    "dateparser>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pandas-stubs>=2.2.2.240807",
    "types-beautifulsoup4>=4.12.0.20240907",
]

[tool.basedpyright]
reportUnknownVariableType = false
reportUnknownMemberType = false
reportOptionalMemberAccess = false
reportAttributeAccessIssue = false
reportCallIssue = false
reportArgumentType = false
